--- a/application_info/index.html
+++ b/application_info/index.html
@@ -154,34 +154,34 @@
             <div class="dropdown-content">
               <a href="/glorify/">
 
-                <div class="cardBorder GLORIFY">
+                <div class="GLORIFY">
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
-                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                    <h5 class="colorBlack">GLORIFY | Daily Worship in Christian Practice</h5>
                   </div>
                 </div>
               </a>
               <a href="/seer/">
-                <div class="cardBorder SEER ">
+                <div class="SEER">
                   <img src="../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
-                    <h6 class="colorBlack">SEER | Track business performance</h6>
+                    <h5 class="colorBlack">SEER | Marketing Manager Tracking Business Performance</h5>
                   </div>
                 </div>
               </a>
               <a href="/appointa/">
-                <div class="cardBorder APPOINTA">
+                <div class="APPOINTA">
                   <img src="../image/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
-                    <h5 class="colorBlack">APPOINTA | Scheduling</h5>
+                    <h5 class="colorBlack">APPOINTA | Recruiter Appointment Scheduling</h5>
                   </div>
                 </div>
               </a>
               <a href="/design_system/">
-                <div class="cardBorder ">
-                  <img src="../image/Cover_portfolioWeb.svg" alt="Design System">
+                <div>
+                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h6 class="colorBlack">Design System| vickywang.me</h6>
+                    <h5 class="colorBlack">Design System |  Efficiently Bulid &#38; Maintain Components</h5>
                   </div>
                 </div>
               </a>
