--- a/navigation/index.html
+++ b/navigation/index.html
@@ -149,50 +149,55 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="dropdown nav-item active marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
               <a href="/glorify/">
-                <div class="cardBorder GLORIFY">
+
+                <div class="GLORIFY">
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
-                    <h5 class="colorBlack">GLORIFY | Daily worship</h5>
-                  </div>
-                </div>
-              </a>
-              <a href="/appointa/">
-                <div class="cardBorder APPOINTA">
-                  <img src="../image/Cover_APPOINTA.png" alt="APPOINTA">
-                  <div class="element">
-                    <h5 class="colorBlack">APPOINTA | Scheduling</h5>
+                    <h5 class="colorBlack">GLORIFY | Daily Worship in Christian Practice</h5>
                   </div>
                 </div>
               </a>
               <a href="/seer/">
-                <div class="cardBorder SEER ">
+                <div class="SEER">
                   <img src="../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
-                    <h5 class="colorBlack">SEER | Business performance</h5>
+                    <h5 class="colorBlack">SEER | Marketing Manager Tracking Business Performance</h5>
+                  </div>
+                </div>
+              </a>
+              <a href="/appointa/">
+                <div class="APPOINTA">
+                  <img src="../image/Cover_APPOINTA.png" alt="APPOINTA">
+                  <div class="element">
+                    <h5 class="colorBlack">APPOINTA | Recruiter Appointment Scheduling</h5>
+                  </div>
+                </div>
+              </a>
+              <a href="/design_system/">
+                <div>
+                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
+                  <div class="element">
+                    <h5 class="colorBlack">Design System |  Efficiently Bulid &#38; Maintain Components</h5>
                   </div>
                 </div>
               </a>
 
-              <a href="/design_system/">
-                <div class="cardBorder ">
-                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
-                  <div class="element">
-                    <h5 class="colorBlack">Design System | vickywang.me</h5>
-                  </div>
-                </div>
-              </a>
             </div>
           </li>
 
-          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/architecture"
+              class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+          <li class="nav-item inactive marginZero"><a href="/photography"
+              class="nav-link box font300-1080">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          </li>
         </ul>
+
       </div>
       <div class="hamburger">
         <span class="bar APPOINTA"></span>
