--- a/appointa/index.html
+++ b/appointa/index.html
@@ -136,51 +136,59 @@
       <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       </a>
       <div class="navbar">
+
         <ul class="nav-menu">
-          <li class="dropdown nav-item active APPOINTA marginZero"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="dropdown nav-item active marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
+
               <a href="/glorify/">
-                <div class="cardBorder GLORIFY">
+
+                <div>
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
-                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                    <h5 class="colorBlack">GLORIFY | Daily Worship in Christian Practice</h5>
                   </div>
                 </div>
               </a>
               <a href="/seer/">
-                <div class="cardBorder SEER ">
+                <div>
                   <img src="../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
-                    <h6 class="colorBlack">SEER | Track business performance</h6>
+                    <h5 class="colorBlack">SEER | Marketing Manager Tracking Business Performance</h5>
                   </div>
                 </div>
               </a>
               <a href="/design_system/">
-                <div class="cardBorder ">
+                <div>
                   <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h6 class="colorBlack">Design System | vickywang.me</h6>
+                    <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
                   </div>
                 </div>
               </a>
               <a href="/navigation/">
-                <div class="cardBorder ">
-                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
+                <div>
+                  <img src="../image/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
-                    <h6 class="colorBlack">Navigation Design | vickywang.me</h6>
+                    <h5 class="colorBlack">Navigation Design | Secondary Menu Options for vickywang.me</h5>
                   </div>
                 </div>
               </a>
+
             </div>
           </li>
 
-
-          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/architecture"
+              class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+          <li class="nav-item inactive marginZero"><a href="/photography"
+              class="nav-link box font300-1080">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          </li>
         </ul>
+
+
       </div>
       <div class="hamburger">
         <span class="bar APPOINTA"></span>
