--- a/seer/index.html
+++ b/seer/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -65,7 +66,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -126,53 +129,62 @@
       <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       </a>
       <div class="navbar">
+
+
+
         <ul class="nav-menu">
-          <li class="dropdown nav-item active SEER marginZero"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="dropdown nav-item active marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
+
               <a href="/glorify/">
-                <div class="cardBorder GLORIFY">
+
+                <div class="GLORIFY">
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
-                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                    <h5 class="colorBlack">GLORIFY | Daily Worship in Christian Practice</h5>
                   </div>
                 </div>
               </a>
               <a href="/appointa/">
-                <div class="cardBorder APPOINTA">
+                <div class="APPOINTA">
                   <img src="../image/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
-                    <h5 class="colorBlack">APPOINTA | Scheduling</h5>
+                    <h5 class="colorBlack">APPOINTA | Recruiter Appointment Scheduling</h5>
                   </div>
                 </div>
               </a>
               <a href="/design_system/">
-                <div class="cardBorder ">
+                <div>
                   <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h5 class="colorBlack">Design System | vickywang.me</h5>
+                    <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
                   </div>
                 </div>
               </a>
               <a href="/navigation/">
-                <div class="cardBorder ">
-                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
+                <div>
+                  <img src="../image/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
-                    <h6 class="colorBlack">Navigation Design | vickywang.me</h6>
+                    <h5 class="colorBlack">Navigation Design | Secondary Menu Options for vickywang.me</h5>
                   </div>
                 </div>
               </a>
+
             </div>
-            
           </li>
 
-
-          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/architecture"
+              class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+          <li class="nav-item inactive marginZero"><a href="/photography"
+              class="nav-link box font300-1080">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          </li>
         </ul>
       </div>
+
+
 
       <div class="hamburger">
         <span class="bar SEER"></span>
