--- a/index.html
+++ b/index.html
@@ -6,51 +6,46 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="title" content="Vicky W. | UX Designer | Projects">
-  <title>Vicky W. | UX Designer | Projects </title>
+  <!-- Basic Metadata -->
+  <title>Vicky W. | UX Designer | Projects</title>
   <link rel="canonical" href="https://vickywang.me/">
   <meta name="author" content="Vicky W.">
-
   <meta name="keywords"
-    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
+    content="Vicky Wang, UX Design, User Experience Design, User Interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
   <meta name="description"
     content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
 
+  <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX Designer" />
-  <meta property='og:description'
-    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-  <meta property='og:url' content="https://vickywang.me" />
+  <meta property="og:title" content="Vicky W. | UX Designer | Projects">
+  <meta property="og:description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+  <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/">
+  <meta property="twitter:title" content="Vicky W. | UX Designer | Projects">
+  <meta property="twitter:description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
+
+  <!-- favicon -->
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <!-- favicon -->
 
-
-  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="627">
-  <meta property="og:image:type" content="image/jpeg">
-  <!-- linkedin -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@vickyw_design" />
-  <meta name="twitter:title" content="Vicky's Website" />
-  <meta name="twitter:description"
-    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
-  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta name="twitter:url" content="//vickywang.me/">
-  <meta name="twitter:creator" content="VICKY WANG" />
-  <!-- twitter -->
-
+  <!-- Links -->
   <link rel="stylesheet" href="./main.css">
   <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript" src="scripts_project.js"></script>
 
-
+  <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -142,15 +137,14 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
 
+  <!--aos-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!--aos-->
 
 
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
   <!-- google analytics-->
-
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -158,7 +152,6 @@
 
     gtag('config', 'G-E8YXDWJST2');
   </script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
 </head>
 
 <body>
@@ -239,8 +232,9 @@
 
           <div class="Grid-cell">
             <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly" >
-                <img title="Copy Email Address to Clipboard" class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+              <button class="ClipboardIconOnly">
+                <img title="Copy Email Address to Clipboard" class="iconM hoverGrey100 paddingMax borderRadiusMax"
+                  src="./icon/mail.svg" alt="LinkedIn">
                 <p class="clickIconCopy">vickyw.design@gmail.com</p>
               </button>
             </div>
@@ -568,8 +562,8 @@
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
 
-                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                  src="./icon/mail.svg" alt="LinkedIn">
+                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax"
+                  title="Copy to Clipboard" src="./icon/mail.svg" alt="LinkedIn">
                 <p class="clickIconCopy">vickyw.design@gmail.com</p>
               </button>
             </div>
