--- a/design_system/index.html
+++ b/design_system/index.html
@@ -765,17 +765,19 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <p class="specialTextS Grey500">Lato</p>
+                <p class="specialTextS Grey700">Lato</p>
               </div>
             </div>
           </div>
           <div class="blankHS"></div>
 
+
+          <div class="blankHS"></div>
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Display <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                <h2 class="tArrow">Font Weight <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
                 </h2>
               </div>
             </div>
@@ -783,105 +785,125 @@
           <!-- Arrow -->
           <div class="blankHXS"></div>
 
+          <div class="Grid Grid--gutters Grid--1of6">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="fontWeight300">Light
+                </h3>
+                <h3 class="fontWeight300">Regular
+                </h3>
+                <h3 class="fontWeight300">Medium
+                </h3>
+                <h3 class="fontWeight300">Bold
+                </h3>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="fontWeight100">Font-weight: 100</h3>
+                <h3 class="fontWeight300">Font-weight: 300</h3>
+                <h3 class="fontWeight400">Font-weight: 400</h3>
+                <h3 class="fontWeight700">Font-weight: 700</h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="blankHS"></div>
+          <!-- Arrow -->
           <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Font Sizes <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--gutters Grid--1of6">
+            <div class="Grid-cell">
+              <div class="element">
+                <p class="specialTextL">Display</p>
+                <p class="specialTextS">Display</p>
+
+                <h1 class="fontWeight300">h1
+                </h1>
+                <h2 class="fontWeight300">h2
+                </h2>
+                <h3 class="fontWeight300">h3
+                </h3>
+                <h4 class="fontWeight300">h4
+                </h4>
+                <h5 class="fontWeight300">h5
+                </h5>
+                <h6 class="fontWeight300">h6
+                </h6>
+                <p class="fontWeight300">p
+                </p>
+              </div>
+            </div>
             <div class="Grid-cell">
               <div class="element">
                 <p class="specialTextL">Display 1, Lorem ipsum dolor sit amet</p>
                 <p class="specialTextS">Display 2, Lorem ipsum dolor sit amet</p>
-              </div>
-            </div>
-          </div>
-          <div class="blankHS"></div>
-          <!-- Arrow -->
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h2 class="tArrow">Heading <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-                </h2>
-              </div>
-            </div>
-          </div>
-          <!-- Arrow -->
-          <div class="blankHXS"></div>
 
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h1 class="fontWeight500">h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                  amet
+                <h1 class="fontWeight300">h1 - margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
                 </h1>
-                <h2 class="fontWeight500">h2 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                  amet
+                <h2 class="fontWeight300">h2 - margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
                 </h2>
-                <h3 class="fontWeight300">h3 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                  amet
+                <h3 class="fontWeight300">h3 - margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
                 </h3>
-                <h4 class="fontWeight300">h4 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                  amet
+                <h4 class="fontWeight300">h4 - margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
                 </h4>
-                <h5 class="fontWeight300">h5 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                  amet
+                <h5 class="fontWeight300">h5 - margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
                 </h5>
-                <h6 class="fontWeight300">h6 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                  amet
+                <h6 class="fontWeight300">h6 - margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet
                 </h6>
+                <p class="fontWeight300">Paragraph - Lorem ipsum dolor sit amet
+                </p>
               </div>
             </div>
           </div>
-          <div class="blankHS"></div>
 
+          <div class="blankHS"></div>
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Body <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                <h2 class="tArrow">Font - Others <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
                 </h2>
               </div>
             </div>
           </div>
           <!-- Arrow -->
           <div class="blankHXS"></div>
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--gutters Grid--1of6">
             <div class="Grid-cell">
               <div class="element">
+                <p class="specialTextNote">Note</p>
+                <div class="t-hello">Note</div>
 
-                <p class="thick">Paragraph, thick, Lorem ipsum dolor sit amet</p>
-                <p class="default">Paragraph, normal, Lorem ipsum dolor sit amet</p>
-                <p class="light">Paragraph, light, Lorem ipsum dolor sit amet</p>
-              </div>
-            </div>
-          </div>
-          <div class="blankHS"></div>
-          <!-- Arrow -->
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h2 class="tArrow">Others <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-                </h2>
-              </div>
-            </div>
-          </div>
-          <!-- Arrow -->
-          <div class="blankHXS"></div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-
-                <strong>
-                  <h3>Bold, font weight 500, Lorem ipsum dolor sit amet</h3>
-                </strong>
-                <h3 class="allCaps fontWeight300">Uppercase, Lorem ipsum dolor sit amet</h3>
-                <p class="tArrow">Label, Lorem ipsum dolor sit amet</p>
-                <p class="specialTextNote">Note, Lorem ipsum dolor sit amet</p>
-                <div class="t-hello">Note, Lorem ipsum dolor sit amet</div>
                 <h3 class="textUnderline fontWeight300">text decoration</h3>
+
+                <h3 class="textDecor fontWeight300">text decoration</h3>
+
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <p class="specialTextNote">Note, Lorem ipsum dolor sit amet</p>
+
+                <div class="t-hello">Note, Lorem ipsum dolor sit amet</div>
+
+                <h3 class="textUnderline fontWeight300">text decoration</h3>
+
+
                 <h3 class="textDecor fontWeight300">text decoration</h3>
               </div>
             </div>
           </div>
-          <div class="blankHS"></div>
-
         </div>
       </section>
       <section id="content13">
@@ -914,6 +936,8 @@
             <div class="Grid-cell">
               <div class="element">
                 <img class="widthS" src="Wordmark_LogoTxt.svg" alt="Wordmark">
+
+
               </div>
             </div>
           </div>
@@ -1874,7 +1898,7 @@
               <div class="codeTiltle">HTML</div>
 
               <code> 
-                &lt;div class="Grid Grid--gutters Grid--1of6"&gt;
+              &lt;div class="Grid Grid--gutters Grid--1of6"&gt;
                 &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of6"&gt;&lt;/div&gt;&lt;/div&gt;
                 &lt;div class="Grid-cell"&gt;&lt;div class="Demo"&gt;auto&lt;/div&gt;&lt;/div&gt;
               &lt;/div&gt;
@@ -4061,7 +4085,8 @@
           <div class="Grid-cell">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
-                <img title="Copy to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="Mail">
+                <img title="Copy to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax"
+                  src="../icon/mail.svg" alt="Mail">
                 <p class="clickIconCopy">vickyw.design@gmail.com
                 </p>
               </button>
