--- a/glorify/index.html
+++ b/glorify/index.html
@@ -246,20 +246,19 @@
     <div class="Grid-cell">
       <div class="element">
         <h3><strong>Context</strong></h3>
-        <h4>Glorify is a mobile application that offers <span class="textDecor GLORIFY"> a vast library of
-            content</span> designed to support users in their spiritual journey,
+        <h4>Glorify is a mobile application that offers a vast library of
+            content designed to support users in their spiritual journey,
           particularly those who follow the Christian faith. The app provides a
           range of resources such as daily devotionals, scripture readings, prayer guides, and other faith-based content
-          that users can access at their convenience. Glorify's content is designed to be <span
-            class="textDecor GLORIFY">immersive and engaging, with a focus on helping users deepen their spiritual
-            connection and growth</span>.</h4>
+          that users can access at their convenience. Glorify's content is designed to be immersive and engaging, with a focus on helping users deepen their spiritual
+            connection and growth.</h4>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
         <h3><strong>Opportunity</strong></h3>
-        <h4>Despite its rich content, Glorify has been primarily <span class="textDecor GLORIFY"> a single-player
-            experience</span>, <span class="textDecor GLORIFY"> lacking the community engagement features</span> that
+        <h4>Despite its rich content, Glorify has been primarily a single-player
+            experience, lacking the community engagement features that
           are integral to Christianity. This can limit the app's ability to fully meet the user's needs for social and
           collaborative experiences in their faith journey. To improve the user experience, I exploring ways to
           incorporate community engagement features that align with the values of Christianity. </h4>
