--- a/design_system/index.html
+++ b/design_system/index.html
@@ -2885,7 +2885,7 @@
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
-              <h2 class="tArrow"> Cards - Clean <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              <h2 class="tArrow"> Card <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
               </h2>
             </div>
           </div>
@@ -2989,7 +2989,7 @@
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
-              <h2 class="tArrow"> Cards - Border <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              <h2 class="tArrow"> Card &#43; Border <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
               </h2>
             </div>
           </div>
@@ -3064,7 +3064,7 @@
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
-              <h2 class="tArrow"> Cards - Gradient <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              <h2 class="tArrow"> Card &#43; Gradient <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
               </h2>
             </div>
           </div>
@@ -3157,11 +3157,100 @@
             </pre>
           </div>
           <div class="blankHM"></div>
+          <!-- Arrow -->
+
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Card &#43; image <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="shadowBox">
+                    <img src="../Placeholder.svg" alt="Placeholder">
+                    <div class="element">
+                      <div class="element">
+                        <h5>Lorem</h5>
+                        <h3><strong>Lorem ipsum</strong> </h3>
+                        <p class="lineHorizAll"></p>
+                        <h6> Lorem ipsum dolor sit amet</h6>
+                        <h6> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="shadowBox">
+                    <img src="../Placeholder.svg" alt="Placeholder">
+                    <div class="element">
+                      <div class="element">
+                        <h5>Lorem</h5>
+                        <h3><strong>Lorem ipsum</strong> </h3>
+                        <p class="lineHorizAll"></p>
+                        <h6> Lorem ipsum dolor sit amet</h6>
+                        <h6> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="element">
+            <pre>
+              <div class="codeTiltle">HTML</div>
+                <code>
+                  &lt;div class="wrapper"&gt;
+                    &lt;div class="Grid Grid--gutters Grid--cols-2"&gt;
+                      &lt;div class="Grid-cell"&gt;
+                        &lt;div class="element"&gt;
+                          &lt;div class="shadowBox"&gt;
+                            &lt;img src="../Placeholder.svg" alt="Placeholder"&gt;
+                            &lt;div class="element"&gt;
+                              &lt;div class="element"&gt;
+                                &lt;h5&gt;Lorem&lt;/h5&gt;
+                                &lt;h3&gt;&lt;strong&gt;Lorem ipsum&lt;/strong&gt; &lt;/h3&gt;
+                                &lt;p class="lineHorizAll"&gt;&lt;/p&gt;
+                                &lt;h6&gt; Lorem ipsum dolor sit amet&lt;/h6&gt;
+                                &lt;h6&gt; sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/h6&gt;
+                              &lt;/div&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;
+                        &lt;div class="element"&gt;
+                          &lt;div class="shadowBox"&gt;
+                            &lt;img src="../Placeholder.svg" alt="Placeholder"&gt;
+                            &lt;div class="element"&gt;
+                              &lt;div class="element"&gt;
+                                &lt;h5&gt;Lorem&lt;/h5&gt;
+                                &lt;h3&gt;&lt;strong&gt;Lorem ipsum&lt;/strong&gt; &lt;/h3&gt;
+                                &lt;p class="lineHorizAll"&gt;&lt;/p&gt;
+                                &lt;h6&gt; Lorem ipsum dolor sit amet&lt;/h6&gt;
+                                &lt;h6&gt; sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/h6&gt;
+                              &lt;/div&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                </code>
+            </pre>
+          </div>
+          <div class="blankHM"></div>
 
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
-              <h2 class="tArrow">Hover card - with Link <img class="seArrow" src="../icon/arrow-se.svg"
+              <h2 class="tArrow">Card &#43; image &#43; Link <img class="seArrow" src="../icon/arrow-se.svg"
                   alt="icon arrow">
               </h2>
             </div>
@@ -3207,53 +3296,52 @@
               </div>
             </div>
           </div>
-          <!-- Arrow -->
-          <div class="blankHM"></div>
+          <div class="element">
+            <pre>
+              <div class="codeTiltle">HTML</div>
+              <code>
+                &lt;div class="wrapper"&gt;
+                  &lt;div class="Grid Grid--gutters Grid--cols-2"&gt;
+                    &lt;div class="Grid-cell"&gt;
+                      &lt;div class="element"&gt;
+                        &lt;div class=""&gt;
+                          &lt;div class="elementCard float cardBorder shadowBoxLt"&gt;
+                            &lt;img src="../Placeholder.svg" alt="Placeholder"&gt;
+                            &lt;div class="element"&gt;
+                              &lt;div class="element"&gt;
+                                &lt;h5&gt;Lorem ipsum dolor sit amet&lt;/h5&gt;
+                                &lt;h3 class="arrCard" data-aos="fade-up"&gt;&lt;strong&gt;Lorem ipsum&lt;/strong&gt;&lt;/h3&gt;
+                                &lt;h4&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                  ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo.&lt;/h4&gt;
+                              &lt;/div&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class="Grid-cell"&gt;
+                      &lt;div class="element"&gt;
+                        &lt;div class="elementCard float cardBorder shadowBoxLt"&gt;
+                          &lt;img src="../Placeholder.svg" alt="Placeholder"&gt;
+                          &lt;div class="element"&gt;
+                            &lt;div class="element"&gt;
+                              &lt;h5&gt;Lorem ipsum dolor sit amet&lt;/h5&gt;
+                              &lt;h3 class="arrCard" data-aos="fade-up"&gt;&lt;strong&gt;Lorem ipsum&lt;/strong&gt;&lt;/h3&gt;
+                              &lt;!--Analysis Report--&gt;
+                              &lt;h4&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo.&lt;/h4&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+                </code>
+                
+            </pre>
+          </div>
 
-          <div class="wrapper">
-            <div class="element">
-              <h2 class="tArrow">Hover card - without Link <img class="seArrow" src="../icon/arrow-se.svg"
-                  alt="icon arrow">
-              </h2>
-            </div>
-          </div>
-          <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--cols-2">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="shadowBox">
-                    <img src="../Placeholder.svg" alt="Placeholder">
-                    <div class="element">
-                      <div class="element">
-                        <h5>Lorem</h5>
-                        <h3><strong>Lorem ipsum</strong> </h3>
-                        <p class="lineHorizAll"></p>
-                        <h6> Lorem ipsum dolor sit amet</h6>
-                        <h6> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="shadowBox">
-                    <img src="../Placeholder.svg" alt="Placeholder">
-                    <div class="element">
-                      <div class="element">
-                        <h5>Lorem</h5>
-                        <h3><strong>Lorem ipsum</strong> </h3>
-                        <p class="lineHorizAll"></p>
-                        <h6> Lorem ipsum dolor sit amet</h6>
-                        <h6> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="blankHM"></div>
         <!-- Arrow -->
